Remove unused dependency
Wasn't using Batteries.

--- a/src/dune
+++ b/src/dune
@@ -2,4 +2,4 @@
   (name main)
   (public_name origami-sledgehammer)
   (preprocess (pps lwt.ppx))
-  (libraries cmdliner lwt nocrypto.lwt tyre cohttp.lwt batteries base64))
+  (libraries cmdliner lwt nocrypto.lwt tyre cohttp.lwt base64))
