--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,4 @@
 (library
   (name pastebin)
   (public_name origami-sledgehammer)
-  (preprocess (pps lwt.ppx))
-  (libraries lwt nocrypto tyre cohttp.lwt base64 tyxml))
+  (libraries lwt mirage-crypto tyre cohttp-lwt base64 tyxml))
