Add cohttp version constraint
Versions prior to cohttp 4.0.0 don't set scheme on the request properly.

--- a/origami-sledgehammer.opam
+++ b/origami-sledgehammer.opam
@@ -16,7 +16,7 @@ depends: [
   "mirage-crypto"
   "mirage-crypto-rng"
   "tyre"
-  "cohttp"
+  "cohttp" {>= "4.0.0"}
   "cohttp-lwt-unix"
   "base64"
   "tyxml"
